--- a/lab1/.vscode/settings.json
+++ b/lab1/.vscode/settings.json
@@ -56,6 +56,9 @@
         "functional": "cpp",
         "list": "cpp",
         "unordered_map": "cpp",
-        "xhash": "cpp"
+        "xhash": "cpp",
+        "fstream": "cpp",
+        "sstream": "cpp",
+        "string": "cpp"
     }
 }
