Fixed some bugs and added some new methods

--- a/lab1/.vscode/settings.json
+++ b/lab1/.vscode/settings.json
@@ -59,6 +59,9 @@
         "xhash": "cpp",
         "fstream": "cpp",
         "sstream": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "algorithm": "cpp",
+        "optional": "cpp",
+        "random": "cpp"
     }
 }
